force-app/main/default/objects/Delivery_Exception__c/Delivery_Exception__c.object-meta.xml
<CustomObject>
    <label>Delivery Exception</label>
    <pluralLabel>Delivery Exceptions</pluralLabel>
    <nameField>
        <displayFormat>EXC-{00000}</displayFormat>
        <label>Delivery Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>