force-app/main/default/objects/Delivery_Exception__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type><referenceTo>User</referenceTo><relationshipLabel>Assigned To</relationshipLabel><relationshipName>Assigned_To</relationshipName>
</CustomField>