force-app/main/default/objects/Delivery_Exception__c/fields/Escalation_Required__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Required__c</fullName>
    <label>Escalation Required</label>
    <type>Checkbox</type><default>false</default>
</CustomField>