force-app/main/default/objects/Delivery_Exception__c/fields/Exception_Type__c.field-meta.xml
        <CustomField>
            <fullName>Exception_Type__c</fullName>
            <label>Exception Type</label>
            <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Delay</fullName><default>false</default><label>Delay</label></value>
<value><fullName>Failed Delivery</fullName><default>false</default><label>Failed Delivery</label></value>
<value><fullName>Route Issue</fullName><default>false</default><label>Route Issue</label></value>
<value><fullName>Address Issue</fullName><default>false</default><label>Address Issue</label></value>
<value><fullName>Damaged Shipment</fullName><default>false</default><label>Damaged Shipment</label></value>
<value><fullName>Customer Unavailable</fullName><default>false</default><label>Customer Unavailable</label></value>
<value><fullName>Other</fullName><default>false</default><label>Other</label></value></valueSetDefinition></valueSet>
        </CustomField>