force-app/main/default/objects/Delivery_Exception__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Open</fullName><default>true</default><label>Open</label></value><value><fullName>Assigned</fullName><default>false</default><label>Assigned</label></value><value><fullName>Investigating</fullName><default>false</default><label>Investigating</label></value><value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value><value><fullName>Closed</fullName><default>false</default><label>Closed</label></value></valueSetDefinition></valueSet>
</CustomField>