force-app/main/default/objects/Delivery_Exception__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Low</fullName><default>true</default><label>Low</label></value><value><fullName>Medium</fullName><default>false</default><label>Medium</label></value><value><fullName>High</fullName><default>false</default><label>High</label></value><value><fullName>Critical</fullName><default>false</default><label>Critical</label></value></valueSetDefinition></valueSet>
</CustomField>